<resources>
    <string name="app_name">Sintronico</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Aceptar">aceptar</string>
    <string name="Quedarse">quedarse</string>
    <string name="Inicio">inicio</string>
    <string name="Perfil">perfil</string>
    <string name="Bicicletas">bicicileta</string>
    <string name="Repuestos">repuestos</string>
    <string name="Presupuestos">Presupuestos</string>
    <string name="Pagos">pagis</string>
    <string name="Salir">salir</string>
</resources>