<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicioFragment"
            android:icon="@drawable/home"
            android:title="@string/Inicio" />
        <item
            android:id="@+id/perfilFragment"
            android:icon="@drawable/perfil"
            android:title="@string/Perfil" />
        <item
            android:id="@+id/bicicletasFragment"
            android:icon="@drawable/bicicleta"
            android:title="@string/Bicicletas" />
        <item
            android:id="@+id/repuestosFragment"
            android:icon="@drawable/repuestos"
            android:title="@string/Repuestos" />
        <item
            android:id="@+id/PresupuestoFragment"
            android:icon="@drawable/presupuesto"
            android:title="@string/Presupuestos" />
        <item
            android:id="@+id/pagosFragment"
            android:icon="@drawable/pagos"
            android:title="@string/Pagos" />
        <item
            android:id="@+id/salirFragment"
            android:icon="@drawable/salir"
            android:title="@string/Salir" />
    </group>
</menu>