<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/inicioFragment">
    <fragment
        android:id="@+id/inicioFragment"
        android:name="com.example.sintronico.Ui.Inicio.InicioFragment"
        android:label="@string/Inicio"
        tools:layout="@layout/activity_login" />
    <fragment
        android:id="@+id/bicicletasFragment"
        android:name="com.example.sintronico.Ui.Bicicletas.BicicletasFragment"
        android:label="@string/Bicicletas"
        tools:layout="@layout/fragment_bicicletas" >
        <action
            android:id="@+id/action_bicicletasFragment_to_detalleBicicletaFragment"
            app:destination="@id/detalleBicicletaFragment" />
        <action
            android:id="@+id/action_bicicletasFragment_to_altaBicicletaFragment"
            app:destination="@id/altaBicicletaFragment" />
    </fragment>
    <fragment
        android:id="@+id/pagosFragment"
        android:name="com.example.sintronico.Ui.Pagos.PagosFragment"
        android:label="@string/Pagos"
        tools:layout="@layout/fragment_pagos" />
    <fragment
        android:id="@+id/perfilFragment"
        android:name="com.example.sintronico.Ui.Perfil.PerfilFragment"
        android:label="@string/Perfil"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_perfilFragment_to_resetearPassFragment"
            app:destination="@id/resetearPassFragment" />
    </fragment>
    <fragment
        android:id="@+id/PresupuestoFragment"
        android:name="com.example.sintronico.Ui.Presupuesto.PresupuestoFragment"
        android:label="@string/Presupuestos"
        tools:layout="@layout/fragment_presupuesto" >
        <action
            android:id="@+id/action_PresupuestoFragment_to_detalle_PresupuestoFragment"
            app:destination="@id/detalle_PresupuestoFragment" />
    </fragment>
    <fragment
        android:id="@+id/repuestosFragment"
        android:name="com.example.sintronico.Ui.Repuestos.RepuestosFragment"
        android:label="@string/Repuestos"
        tools:layout="@layout/fragment_repuestos" >
        <action
            android:id="@+id/action_repuestosFragment_to_detalle_RepuestoFragment"
            app:destination="@id/detalle_RepuestoFragment" />
    </fragment>
    <fragment
        android:id="@+id/salirFragment"
        android:name="com.example.sintronico.Ui.Salir.SalirFragment"
        android:label="@string/Salir"
        tools:layout="@layout/fragment_salir" />
    <fragment
        android:id="@+id/detalleBicicletaFragment"
        android:name="com.example.sintronico.Ui.Bicicletas.DetalleBicicletaFragment"
        android:label="Detalle de Bicicleta"
        tools:layout="@layout/fragment_detalle_bicicleta" >
        <action
            android:id="@+id/action_detalleBicicletaFragment_to_bicicletasFragment"
            app:destination="@id/bicicletasFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalle_PresupuestoFragment"
        android:name="com.example.sintronico.Ui.Presupuesto.Detalle_PresupuestoFragment"
        android:label="Detalle ed Presupuesto"
        tools:layout="@layout/fragment_detalle_presupuesto" >
        <action
            android:id="@+id/action_detalle_PresupuestoFragment_to_reparacionesFragment"
            app:destination="@id/PresupuestoFragment" />
        <action
            android:id="@+id/action_detalle_PresupuestoFragment_to_PresupuestoFragment"
            app:destination="@id/PresupuestoFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalle_RepuestoFragment"
        android:name="com.example.sintronico.Ui.Repuestos.Detalle_RepuestoFragment"
        android:label="Detalle de Repuesto"
        tools:layout="@layout/fragment_detalle_repuesto" >
        <action
            android:id="@+id/action_detalle_RepuestoFragment_to_repuestosFragment"
            app:destination="@id/repuestosFragment" />
    </fragment>
    <fragment
        android:id="@+id/altaBicicletaFragment"
        android:name="com.example.sintronico.Ui.Bicicletas.AltaBicicletaFragment"
        android:label="Alta de Bicicleta"
        tools:layout="@layout/fragment_alta_bicicleta" >
        <action
            android:id="@+id/action_altaBicicletaFragment_to_bicicletasFragment"
            app:destination="@id/bicicletasFragment" />
    </fragment>
    <fragment
        android:id="@+id/resetearPassFragment"
        android:name="com.example.sintronico.Ui.Perfil.ResetearPassFragment"
        android:label="Restablecer Contraseña" >
        <action
            android:id="@+id/action_resetearPassFragment_to_perfilFragment"
            app:destination="@id/perfilFragment" />
    </fragment>
</navigation>